--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.1
   dotted_border: ^2.0.0+3
+  smooth_page_indicator: ^1.0.0+2
 
 dev_dependencies:
   flutter_test:
